--- a/.eslintrc
+++ b/.eslintrc
@@ -10,5 +10,17 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "rules": {}
+  "rules": {
+    "semi": "off",
+    "arrow-parens": "off",
+    "no-console": "off",
+    "no-throw-literal": "off",
+    "implicit-arrow-linebreak": "off",
+    "no-eval": "off",
+    "no-unused-vars": "off",
+    "class-methods-use-this": "off",
+    "import/extensions": "off",
+    "import/prefer-default-export": "off",
+    "import/no-unresolved": "off"
+  }
 }
