--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "rules",
   "version": "0.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "author": {
     "name": "Romullo",
     "email": "developermarsh@gmail.com",
@@ -16,7 +17,10 @@
     "url": "https://github.com/hiukky/rules"
   },
   "scripts": {
-    "build": "lerna run build --stream",
+    "prebuild": "rimraf dist",
+    "build": "esbuild lib/index.ts --outfile=dist/index.js --bundle",
+    "dev": "tsnd --respawn lib/index.ts",
+    "postbuild": "tsc -p tsconfig.json",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write \"packages/**/*.{js, ts, tsx}\""
@@ -25,13 +29,18 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "esbuild": "^0.8.36",
     "eslint": "^7.18.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "husky": "^4.3.8",
+    "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   }
 }
