chore(): engine improviments

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,7 +16,11 @@
     "no-console": "off",
     "no-throw-literal": "off",
     "implicit-arrow-linebreak": "off",
+    "lines-between-class-members": "off",
     "no-eval": "off",
+    "no-useless-constructor": "off",
+    "no-empty-function": "off",
+    "object-curly-newline": "off",
     "no-unused-vars": "off",
     "class-methods-use-this": "off",
     "import/extensions": "off",
