--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     "experimentalDecorators": true,
     "baseUrl": "."
   },
-  "include": ["lib/**/*"],
+  "include": ["lib/**/*", "index.ts"],
   "exclude": ["node_modules", "dist"]
 }
