--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "postbuild": "tsc -p tsconfig.json",
     "lint": "eslint . --ext .ts",
     "lint:fix": "yarn lint --fix",
+    "test": "jest",
+    "test:cov": "jest --coverage",
     "format": "prettier --write \"*.{ts}\""
   },
   "license": "MIT",
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.22",
     "@types/type-check": "^0.3.27",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
@@ -38,14 +41,19 @@
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "husky": "^4.3.8",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
   },
   "dependencies": {
     "expression-eval": "^4.0.0",
     "type-check": "^0.4.0"
-  }
+  },
+  "files": [
+    "dist"
+  ]
 }
