--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grule",
-  "version": "0.0.0",
+  "version": "0.1.0-alpha.1",
   "main": "dist/index.js",
   "typings": "dist/index.d.ts",
   "author": {
@@ -36,7 +36,7 @@
     "@types/type-check": "^0.3.27",
     "@typescript-eslint/eslint-plugin": "^4.14.2",
     "@typescript-eslint/parser": "^4.14.2",
-    "esbuild": "^0.8.40",
+    "esbuild": "^0.8.42",
     "eslint": "^7.19.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
@@ -47,6 +47,9 @@
     "ts-jest": "^26.5.0",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "chork": "^0.1.0-alpha.2"
   },
   "files": [
     "dist"
