--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "grule",
-  "version": "0.1.0-alpha.6",
+  "version": "0.1.0-alpha.8",
   "description": "A simple and powerful mechanism for validating rules in JSON.",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "typings": "dist/index.d.ts",
   "author": {
     "name": "Romullo",
@@ -50,7 +51,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
-    "chork": "^0.1.0-alpha.5"
+    "chork": "^0.1.0-alpha.7"
   },
   "size-limit": [
     {
