--- a/package.json
+++ b/package.json
@@ -66,7 +66,10 @@
   "keywords": [
     "grule",
     "rules",
+    "roles",
+    "rules-json",
     "engine",
+    "rete",
     "policy",
     "requirement",
     "validation"
