--- a/.eslintrc
+++ b/.eslintrc
@@ -2,9 +2,9 @@
   "env": {
     "es2021": true,
     "node": true,
-    "jest/globals": true
+    "jest": true
   },
-  "extends": ["airbnb-base"],
+  "extends": ["airbnb-base", "prettier"],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 12,
