--- a/package.json
+++ b/package.json
@@ -27,20 +27,21 @@
     "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:cov": "jest --coverage",
-    "format": "prettier --write \"*.{ts}\""
+    "format": "prettier --write \"**/*.ts\""
   },
   "license": "MIT",
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.25",
+    "@types/node": "^14.14.30",
     "@types/type-check": "^0.3.27",
-    "@typescript-eslint/eslint-plugin": "^4.15.0",
-    "@typescript-eslint/parser": "^4.15.0",
-    "esbuild": "^0.8.43",
-    "eslint": "^7.19.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.1",
+    "@typescript-eslint/parser": "^4.15.1",
+    "esbuild": "^0.8.49",
+    "eslint": "^7.20.0",
     "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
     "husky": "^5.0.9",
     "jest": "^26.6.3",
@@ -48,10 +49,10 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.5"
   },
   "dependencies": {
-    "chork": "^0.1.0-alpha.7"
+    "chork": "^0.1.0"
   },
   "size-limit": [
     {
