--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "lint:fix": "yarn lint --fix",
     "test": "jest",
     "test:cov": "jest --coverage",
-    "format": "prettier --write \"**/*.ts\""
+    "format": "prettier --write \"**/*.ts\"",
+    "semantic-release": "semantic-release"
   },
   "license": "MIT",
   "devDependencies": {
@@ -52,7 +53,8 @@
     "rimraf": "^3.0.2",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5"
+    "typescript": "^4.1.5",
+    "semantic-release": "^17.3.9"
   },
   "dependencies": {
     "chork": "^0.1.0"
