--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "url": "https://github.com/hiukky/grule"
   },
   "scripts": {
+    "cm": "cz",
     "postinstall": "husky install",
     "prebuild": "rimraf dist",
     "build": "esbuild index.ts --outfile=dist/index.js --bundle --platform=node --minify",
@@ -35,6 +36,11 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
+    "@semantic-release/git": "^9.0.0",
+    "@semantic-release/npm": "^7.0.10",
+    "@semantic-release/release-notes-generator": "^9.0.1",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.30",
     "@types/type-check": "^0.3.27",
@@ -51,10 +57,10 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "semantic-release": "^17.3.9",
     "ts-jest": "^26.5.1",
     "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5",
-    "semantic-release": "^17.3.9"
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "chork": "^0.1.0"
