--- a/package.json
+++ b/package.json
@@ -33,28 +33,27 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.30",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.41",
     "@types/type-check": "^0.3.27",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "3.3.0",
-    "esbuild": "^0.8.49",
-    "eslint": "^7.20.0",
+    "esbuild": "^0.11.12",
+    "eslint": "^7.24.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.2.0",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^5.0.9",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^26.5.1",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5",
-    "semantic-release": "^17.3.9"
+    "ts-jest": "^26.5.5",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "chork": "^0.1.0"
