--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grule",
-  "version": "1.0.0-develop.1",
+  "version": "0.1.0",
   "description": "A simple and powerful mechanism for validating rules in JSON.",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "cm": "cz",
-    "postinstall": "husky install",
+    "prepare": "husky install",
     "prebuild": "rimraf dist",
     "build": "esbuild index.ts --outfile=dist/index.js --bundle --platform=node --minify",
     "dev": "tsnd --respawn index.ts",
@@ -30,37 +30,33 @@
     "test": "jest",
     "test:cov": "jest --coverage",
     "format": "prettier --write \"**/*.ts\"",
-    "semantic-release": "semantic-release"
+    "prepublishOnly": "pinst --disable",
+    "postpublish": "pinst --enable"
   },
   "license": "MIT",
   "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/npm": "^7.0.10",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "@types/jest": "^26.0.20",
-    "@types/node": "^14.14.30",
+    "@commitlint/cli": "^12.1.1",
+    "@commitlint/config-conventional": "^12.1.1",
+    "@types/jest": "^26.0.23",
+    "@types/node": "^15.0.2",
     "@types/type-check": "^0.3.27",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.22.1",
+    "@typescript-eslint/parser": "^4.22.1",
     "commitizen": "^4.2.3",
     "cz-conventional-changelog": "3.3.0",
-    "esbuild": "^0.8.49",
-    "eslint": "^7.20.0",
+    "esbuild": "^0.11.19",
+    "eslint": "^7.25.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^7.2.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
-    "husky": "^5.0.9",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
+    "pinst": "^2.1.6",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
-    "semantic-release": "^17.3.9",
-    "ts-jest": "^26.5.1",
-    "ts-node-dev": "^1.1.1",
-    "typescript": "^4.1.5"
+    "ts-jest": "^26.5.6",
+    "ts-node-dev": "^1.1.6",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "chork": "^0.1.0"
